--- a/fe-vite/index.html
+++ b/fe-vite/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clin. Da Dor E Acupuntura</title>
   </head>
-  <body class="h-full bg-amber-100">
+  <body class="h-full bg-indian-khaki-200">
     <div id="root" class="h-full"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
